examples/errors/child_outside_parent.dia
version = 0.1.0

// Example: Child box not contained in parent
// Child box extends beyond parent boundaries
diagram {
    box parent {
        title: "Parent"
        color: blue

        box child {
            title: "Child"
            color: red
        }
    }
}

layout {
    size: (400, 300)

    parent {
        pos: (50, 50)
        size: (200, 150)
    }

    child {
        pos: (150, 100)  // Extends beyond parent (50+200=250, but child goes to 150+100=250)
        size: (120, 80)  // Child right edge at 270, parent right edge at 250
    }
}

